Fix video overlapping main content

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -477,36 +477,39 @@ br.r--730 {
   letter-spacing: 2px;
 }
 
+a:link,
+a:visited {
+  font-weight: 600;
+  color: hsl(200, 60%, 47%);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover,
+a:active {
+  color: black;
+  text-decoration: none;
+}
+
 /* Responsive styles */
 
-@media screen and (max-width: 1100px) {
- .section--main {
-    padding-top: 6em;
-  }
-
-  .p--large-text {
-    margin: 0 auto;
-    width: 80%;
-  }
+@media screen and (max-width: 1280px) {
+  .section--main { padding-top: 2em;}
+  .header--main { max-height: none;}
 }
 
 @media screen and (max-width: 1000px) {
   .wrapper {
     padding: 0 1em;
   }
-
-  .section--main {
-    padding-top: 4em;
-  }
 }
 
 @media screen and (max-width: 920px) {
   body {
     font-size: 17px;
-  }
-
-  .section--main {
-    padding-top: 3em;
   }
 }
 
